<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/process_dialog_background">

    <TextView
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:id="@+id/dialog_pass_title"
        android:text="@string/dialog_title"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:background="@drawable/drawable_textview_title_dialog"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/dialog_order"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_gravity="center"
        android:background="@drawable/process_dialog_edit_text_background"
        android:paddingLeft="@dimen/padding_edit_text_dialogs"
        android:paddingStart="@dimen/padding_edit_text_dialogs"
        android:paddingEnd="@dimen/padding_edit_text_dialogs"
        android:paddingRight="@dimen/padding_edit_text_dialogs"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/margin_edit_text_dialogs"
        android:textColor="#000"
        android:background="@drawable/process_dialog_edit_text_background"
        android:paddingLeft="@dimen/padding_edit_text_dialogs"
        android:paddingStart="@dimen/padding_edit_text_dialogs"
        android:paddingEnd="@dimen/padding_edit_text_dialogs"
        android:paddingRight="@dimen/padding_edit_text_dialogs"
        android:gravity="center"
        android:textColorHint="@color/color_hint_change_pass"
        android:fontFamily="sans-serif"
        android:lines="1"
        android:id="@+id/dialog_amount"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColorHint="@color/color_hint_change_pass"
        android:layout_marginLeft="@dimen/margin_edit_text_dialogs"
        android:layout_marginRight="@dimen/margin_edit_text_dialogs"
        android:layout_marginStart="@dimen/margin_edit_text_dialogs"
        android:layout_marginEnd="@dimen/margin_edit_text_dialogs"
        android:layout_marginBottom="@dimen/margin_edit_text_dialogs"
        android:paddingLeft="@dimen/padding_edit_text_dialogs"
        android:paddingStart="@dimen/padding_edit_text_dialogs"
        android:paddingEnd="@dimen/padding_edit_text_dialogs"
        android:paddingRight="@dimen/padding_edit_text_dialogs"
        android:background="@drawable/process_dialog_edit_text_background"
        android:textColor="#000"
        android:lines="1"
        android:id="@+id/dialog_number_of_card"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColorHint="@color/color_hint_change_pass"
        android:layout_marginLeft="@dimen/margin_edit_text_dialogs"
        android:layout_marginRight="@dimen/margin_edit_text_dialogs"
        android:layout_marginStart="@dimen/margin_edit_text_dialogs"
        android:layout_marginEnd="@dimen/margin_edit_text_dialogs"
        android:layout_marginBottom="@dimen/margin_edit_text_dialogs"
        android:paddingLeft="@dimen/padding_edit_text_dialogs"
        android:paddingStart="@dimen/padding_edit_text_dialogs"
        android:paddingEnd="@dimen/padding_edit_text_dialogs"
        android:paddingRight="@dimen/padding_edit_text_dialogs"
        android:background="@drawable/process_dialog_edit_text_background"
        android:textColor="#000"
        android:lines="1"
        android:hint="@string/name_of_customer"
        android:id="@+id/dialog_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif"
        android:inputType="date"
        android:gravity="center"
        android:textColorHint="@color/color_hint_change_pass"
        android:layout_marginLeft="@dimen/margin_edit_text_dialogs"
        android:layout_marginRight="@dimen/margin_edit_text_dialogs"
        android:layout_marginStart="@dimen/margin_edit_text_dialogs"
        android:layout_marginEnd="@dimen/margin_edit_text_dialogs"
        android:layout_marginBottom="@dimen/margin_edit_text_dialogs"
        android:paddingLeft="@dimen/padding_edit_text_dialogs"
        android:paddingStart="@dimen/padding_edit_text_dialogs"
        android:paddingEnd="@dimen/padding_edit_text_dialogs"
        android:paddingRight="@dimen/padding_edit_text_dialogs"
        android:background="@drawable/process_dialog_edit_text_background"
        android:textColor="#000"
        android:hint="@string/give_date"
        android:lines="1"
        android:id="@+id/dialog_date"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColorHint="@color/color_hint_change_pass"
        android:layout_marginLeft="@dimen/margin_edit_text_dialogs"
        android:layout_marginRight="@dimen/margin_edit_text_dialogs"
        android:layout_marginStart="@dimen/margin_edit_text_dialogs"
        android:layout_marginEnd="@dimen/margin_edit_text_dialogs"
        android:layout_marginBottom="@dimen/margin_edit_text_dialogs"
        android:paddingLeft="@dimen/padding_edit_text_dialogs"
        android:paddingStart="@dimen/padding_edit_text_dialogs"
        android:paddingEnd="@dimen/padding_edit_text_dialogs"
        android:paddingRight="@dimen/padding_edit_text_dialogs"
        android:background="@drawable/process_dialog_edit_text_background"
        android:textColor="#000"
        android:lines="1"
        android:id="@+id/dialog_cvc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/buttons_dialog_background"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/dialog_cancel"
            android:textColor="#707070"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:id="@+id/cancel_bt"
            android:background="@drawable/left_button_dialog_background"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/dialog_pay"
            android:textColor="#707070"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:id="@+id/ok_bt"
            android:background="@drawable/right_button_dialog_background"
            />
    </LinearLayout>

</LinearLayout>